Updated Help files Added web support files so that html files are shared

--- a/DScaler/Help/32Pulldown.HTM
+++ b/DScaler/Help/32Pulldown.HTM
@@ -65,7 +65,7 @@ alogrithm</a>.  This uses field differences to detect field repeats.</p>
 
 <tr>
 <td>NTSC Video Mode</td>
-<td>ADaptive</td>
+<td>Adaptive</td>
 <td>This is the mode that will be used when film mode has not been detected.</td>
 </tr>
 
