--- a/DScaler/Help/Adaptive.HTM
+++ b/DScaler/Help/Adaptive.HTM
@@ -84,19 +84,19 @@ static image mode.</td>
 <tr>
 <td>Static Image Mode</td>
 <td>Weave</td>
-<td>Mode to usae for static images.</td>
+<td>Mode to use for static images.</td>
 </tr>
 
 <tr>
 <td>Low Motion Mode</td>
 <td>Two Frame</td>
-<td>Mode to usae for low motion video.</td>
+<td>Mode to use for low motion video.</td>
 </tr>
 
 <tr>
 <td>High Motion Mode</td>
 <td>Two Frame</td>
-<td>Mode to usae for high motion video.</td>
+<td>Mode to use for high motion video.</td>
 </tr>
 
 <tr>
