--- a/DScaler/Help/Greedy.HTM
+++ b/DScaler/Help/Greedy.HTM
@@ -62,7 +62,12 @@ on slower machines but it will give awful results on high motion
 video material like sports. Quite by accident, it can also do a
 decent job on poorly mastered 3:2 or 2:2 pull down film source
 material like some anime movies, regardless of low or high
-motion. Try it if you have a movie source that is not giving good
+motion.</p>
+
+<p><b><font face="Arial" size="4">Who Should Use
+It?</font></b></p>
+
+<p>Try it if you have a movie source that is not giving good
 results with normal Auto Pull Down processing.</p>
 <!-- #EndEditable -->
 </td>
