--- a/DScaler/Help/LinearCorrection.HTM
+++ b/DScaler/Help/LinearCorrection.HTM
@@ -55,7 +55,7 @@ height="2"></td>
 <tr>
 <td colspan="3">
 <!-- #BeginEditable "Text" -->
-<p>The Linear Correction Filter operates in three quite differenet modes
+<p>The Linear Correction Filter operates in three quite different modes
 <ol>
 <li>Trapeziod.  Simple Digital Keystone correction.</li>
 <li>Complex.  Digital Keystone correction with two axes.</li>
