--- a/DScaler/Help/ScalerBob.HTM
+++ b/DScaler/Help/ScalerBob.HTM
@@ -59,8 +59,13 @@ height="2"></td>
 uses the current field and lets the video card scaler size the
 picture to fit the screen.  Produces reasonable results for fast moving
 images.</p>
+
+<p><b><font face="Arial" size="4">Who Should Use
+It?</font></b></p>
+
 <p>This method uses very little CPU and is recommended on lower spec machines.</p>
-<p>THis method should not be used with autonatic film detection as the overlay needs
+
+<p>This method should not be used with automatic film detection as the overlay needs
 to be resized as the type swiches and this will cause flicker.</p>
 <!-- #EndEditable -->
 </td>
