--- a/DScaler/Help/TemporalComb.htm
+++ b/DScaler/Help/TemporalComb.htm
@@ -84,18 +84,18 @@ means dot crawl on moving backgrounds won't be corrected.</p>
 <p><b><font face="Arial" size="4">Who Should Use
 It?</font></b></p>
 
-<p>You should, of course.</p>
+<p>This filter applies when using a composite connection or when using a composite
+source like LD or VCR.</p>
 
-<p>Well -- a little more usefully: This is a computationally
-intensive filter, and it only helps with certain kinds of video.
+<p>But if you want to get rid of shimmering and dots, this plugin
+can do the trick.</p>
+
+<p>This is a computationally intensive filter, and it only helps with certain kinds of video.
 If you've never noticed dot crawl, don't bother with this plugin.
 If you use an S-video connection from a DVD player or an external
 TV tuner with a 3D comb filter, then you've already taken care of
 the problem, and the Temporal Comb filter probably won't help at
 all.</p>
-
-<p>But if you want to get rid of shimmering and dots, this plugin
-can do the trick.</p>
 
 <p><b><font face="Arial" size="4">The Settings</font></b></p>
 
