--- a/DScaler/Help/Timeshift.htm
+++ b/DScaler/Help/Timeshift.htm
@@ -55,7 +55,7 @@ height="2"></td>
   <tr> 
     <td colspan="3"> 
 <!-- #BeginEditable "Text" --> 
-<p>DSCaler now includes alpha timeshifting code.</p>
+<p>DScaler now includes alpha timeshifting code.</p>
 <!-- #EndEditable --> 
 </td>
 </tr>
