Updated feature help

--- a/DScaler/Help/CC.htm
+++ b/DScaler/Help/CC.htm
@@ -56,6 +56,18 @@ height="2"></td>
     <td colspan="3"> 
 <!-- #BeginEditable "Text" --> 
 <p>DScaler has basic support for Closed Captions.</p>
+<p>Closed Captions exist on:</p>
+<ol><li>TV broadcasts in countries with 60Hz TV signals</li>
+<li>Video Tapes with the Q symbol</li>
+<li>Laserdiscs</li>
+<li>Some DVDs</li></ol>
+<p>To enable closed captions first turn on VBI capture by ensuriing the 
+"Datacasting"/"Capture VBI" menu item is ticked.  Then selecting the CC type to
+be displayed from the "Datacasting"/"Closed Captions" list.  Normally you will 
+want CC 1.</p>
+<p>To switch closed captions off select "CC Off" from the 
+"Datacasting"/"Closed Captions" menu.</p>
+
 <!-- #EndEditable --> 
 </td>
 </tr>
