--- a/DScaler/Help/Teletext.htm
+++ b/DScaler/Help/Teletext.htm
@@ -56,8 +56,13 @@ height="2"></td>
   <tr> 
     <td colspan="3"> 
 <!-- #BeginEditable "Text" -->
-<p>DScaler has a Teletext feature that works over several code pages.</p>
+<p>DScaler has a basic Teletext feature.</p>
+<p>Teletext is a data service provided in the vertical blanking region and
+is found on TV signals broadcast in 50Hz countries.</p>
 <p>Use the T key to toggle between Normal, Teletext and Mix modes.</p>
+<p>To select a page type in the page number while in either Teletext or Mix mode.</p>
+<p>DScaler currently supports a few different code pages for different languages.
+  Select the nearest match from the "Datacasting"/"Teletext Code Page" menu.</p>
 
 <!-- #EndEditable --> 
 </td>
