--- a/DScaler/Help/Thanks.htm
+++ b/DScaler/Help/Thanks.htm
@@ -119,6 +119,8 @@ developers&#151;for the original screen capture code.</li>
 
 <li>Thanks to Eduardo José Tagle for the PAL-NC patch.</li>
 
+<li>Thanks to Mike Temperton for the Russian teletext code page.</li>
+
 <li>Finally thanks to everybody on the deinterlace project
 mailing list.</li>
 </ol>
